# VoiceFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
docs/screenshots/: README.md
scripts/: build-sidecar.ps1  build-tauri.ps1  download_models.py  setup.ps1
sidecar/: asr_engine.py  audio_capture.py  audio_normalizer.py  common_words.txt  confidence_gate.py  config.py  conftest.py  context_capture.py  default_vocabulary.txt  diagnostic_logger.py  ipc_bridge.py  itn.py  llm_formatter.py  lm_rescorer.py  main.py  model_paths.py  model_setup.py  name_casing.py  name_casing_index.txt  name_matcher.py  post_processor.py  pyproject.toml  requirements.txt  seam_nbest.py  text_injector.py  vad.py  vocabulary.py  voiceflow-sidecar-x86_64-pc-windows-msvc.spec
sidecar/models/: README.md
sidecar/tests/: test_model_paths.py  test_model_setup.py  test_resolvers_use_appdata.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  main.rs  models.rs  overlay.rs  settings.rs  sidecar.rs  tray.rs
src/__mocks__/@tauri-apps/api/: event.ts  (+1 more)
src/__tests__/: RecordingOverlay.test.tsx  StatusIndicator.test.tsx  Toggle.test.tsx  formatElapsed.test.ts  useTauriEvents.test.ts
src/components/: RecordingOverlay.tsx  SettingsPanel.tsx  SetupScreen.tsx  StatusIndicator.tsx
src/hooks/: useTauriEvents.ts
src/styles/: globals.css
